# DNAStorage_LCRC

./: LICENSE  README.md  run_decoding_oligoPool.sh  run_decoding_realTime.sh  run_encoding_oligoPool.sh
Decoder/: CMakeLists.txt  run_decoding_oligoPool.sh  run_decoding_realTime.sh
Decoder/src/: Identification_consensus_realTime.cpp  identification_consensus_oligoPool.cpp
Encoder/: CMakeLists.txt  run_encoding_largeDNA.sh
Encoder/src/: encode_largeDNA.cpp  encode_oligoPool.cpp  ldpc_encode.h
config/: ldpc_enc
